migrate to junit